--- a/Aula1_Pandas.ipynb
+++ b/Aula1_Pandas.ipynb
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "VMwkP2hDNiXe"
       },
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "TVkHJ0QRVjBq"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -50,9 +50,9 @@
           "height": 424
         },
         "id": "stvi6runXEFX",
-        "outputId": "fa5f73f7-28b9-41f0-e299-0092a8486866"
+        "outputId": "9603f008-126f-4342-ab87-dc4286620ab5"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,7 +88,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-de04dd66-0ba1-4278-a031-5ccdf113eb76\">\n",
+              "  <div id=\"df-9d969912-8469-40f6-a10e-43b64d282f62\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -256,7 +256,7 @@
               "</table>\n",
               "<p>17000 rows × 9 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de04dd66-0ba1-4278-a031-5ccdf113eb76')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9d969912-8469-40f6-a10e-43b64d282f62')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -307,12 +307,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-de04dd66-0ba1-4278-a031-5ccdf113eb76 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9d969912-8469-40f6-a10e-43b64d282f62 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-de04dd66-0ba1-4278-a031-5ccdf113eb76');\n",
+              "          const element = document.querySelector('#df-9d969912-8469-40f6-a10e-43b64d282f62');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -335,7 +335,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -348,7 +348,7 @@
       "metadata": {
         "id": "_Xh9-VgqXKOY"
       },
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "7DY8p2FBYfCC"
       },
-      "execution_count": 26,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -375,9 +375,9 @@
           "height": 424
         },
         "id": "JzSNiYZHZuwH",
-        "outputId": "96b141be-eff2-4607-e809-1c31735399db"
+        "outputId": "5ec71c48-79fd-4ff5-e8ee-a1b678a5d107"
       },
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -413,7 +413,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-acfb48cd-bc71-4d64-9691-75cdbee906a4\">\n",
+              "  <div id=\"df-6b184b84-0e33-4445-a01c-c9e5d231df97\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -581,7 +581,7 @@
               "</table>\n",
               "<p>17000 rows × 9 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-acfb48cd-bc71-4d64-9691-75cdbee906a4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b184b84-0e33-4445-a01c-c9e5d231df97')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -632,12 +632,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-acfb48cd-bc71-4d64-9691-75cdbee906a4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6b184b84-0e33-4445-a01c-c9e5d231df97 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-acfb48cd-bc71-4d64-9691-75cdbee906a4');\n",
+              "          const element = document.querySelector('#df-6b184b84-0e33-4445-a01c-c9e5d231df97');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -660,7 +660,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 9
         }
       ]
     },
@@ -675,9 +675,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ky68HlWObtRt",
-        "outputId": "4001de28-f3c8-40c8-db6f-fa941fffae34"
+        "outputId": "4a9186e9-825c-4272-d983-3549672c5b29"
       },
-      "execution_count": 28,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,18 +696,130 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 10
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "eCQ7EfYptVZs"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "MencdAJBInj_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Quando trabalhamos fazendo o upload do arquivo, ele fica temporário no coolab, melhor indicado para análises rápidas"
+      ],
+      "metadata": {
+        "id": "QT850pbL_o-6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "De outra forma, poderemos salvar o arquivo no drive ou no github"
+      ],
+      "metadata": {
+        "id": "OJZaPLEz_y5K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se efetuamos a leitura de mais de 1 arquivo, usamos:\n",
+        "df = pd.concat([df1, df2, df3, df4, ...])"
+      ],
+      "metadata": {
+        "id": "WnwUkPH-_9OK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para alterar o tio de uma coluna que não iremos trabalhar, ou por qualquer outro motivo:\n",
+        "df[\"coluna\"] = df[\"coluna\"].astype(\"tipo desejado\")"
+      ],
+      "metadata": {
+        "id": "w3u9YEDBBNWi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Consultando se há valores nulos, e retorna a sua quantidade em casa coluna:\n",
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "sKEyvc76BhGH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "fillna() substitui os valores nulos\n",
+        "dropna() apaga os valores nulos"
+      ],
+      "metadata": {
+        "id": "ow3nWcSbCmOa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para criar nova coluna faz df[\"Nova Coluna\"] e atribui aos dados desejados, senão não cria"
+      ],
+      "metadata": {
+        "id": "ESlp8b15DgNA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Metodos\n",
+        "nlargest(quantidade, coluna)\n",
+        "nsmallest(quantidade, coluna)\n",
+        "retorna a quantidade de linhas pedida daquela coluna com seus maiores ou menores valores"
+      ],
+      "metadata": {
+        "id": "0lcpjZTpDuhA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Agrupamento\n",
+        "df.groupby(\"coluna\")[\"coluna\"].sum() ou nada"
+      ],
+      "metadata": {
+        "id": "Vh5cCJfAIq2F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "pd.to_datetime(coluna) para passar para o tipo data a coluna"
+      ],
+      "metadata": {
+        "id": "7wL3PwmBNPW_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "df.groupby(df[\"Data\"].dt.year)[\"Receita\"].sum()   retorna a soma da receita de casa ano"
+      ],
+      "metadata": {
+        "id": "Vhl6e4pJN1j6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Yw2IOvVZehhJ"
+      }
     }
   ]
 }
